[gd_scene load_steps=26 format=3 uid="uid://y4w17hnjfl2r"]

[ext_resource type="Shader" path="res://assets/graphics/shaders/blur.gdshader" id="1_5ohf3"]
[ext_resource type="Script" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_db6wq"]
[ext_resource type="Script" path="res://scripts/custom_canvas_layer.gd" id="1_vho6j"]
[ext_resource type="PackedScene" uid="uid://dw2fg1a5b0fwb" path="res://scenes/ui/pause_menu/menu_button.tscn" id="2_4glfl"]
[ext_resource type="Texture2D" uid="uid://irx31unbtqmp" path="res://assets/graphics/ui/horloge/Background heure.png" id="4_1gqom"]
[ext_resource type="FontFile" uid="uid://ciqkqlpv7qisu" path="res://assets/fonts/PixAntiqua.ttf" id="4_mj7o4"]
[ext_resource type="Texture2D" uid="uid://ddt3utf2ixmb1" path="res://assets/graphics/ui/pause_menu/menu_icons.png" id="4_o0vl8"]
[ext_resource type="Script" path="res://scenes/ui/pause_menu/bg_time_label.gd" id="5_5a460"]
[ext_resource type="Texture2D" uid="uid://84go724vu24s" path="res://assets/graphics/ui/horloge/Background date.png" id="8_ah852"]
[ext_resource type="Script" path="res://scenes/ui/pause_menu/bg_date.gd" id="9_5ehvt"]
[ext_resource type="Texture2D" uid="uid://cn7wssvh8a4s" path="res://assets/graphics/ui/horloge/Hiver 64px.png" id="10_dml48"]
[ext_resource type="Texture2D" uid="uid://b56wy16yv3cw4" path="res://assets/graphics/ui/horloge/Printemps 64px.png" id="11_uyvtu"]
[ext_resource type="Texture2D" uid="uid://bj217otukdcrf" path="res://assets/graphics/ui/horloge/Ete 64px.png" id="12_tn75m"]
[ext_resource type="Texture2D" uid="uid://b2vkxvptaqyy7" path="res://assets/graphics/ui/horloge/Automne 64px.png" id="13_51m2b"]
[ext_resource type="AudioStream" uid="uid://hj3nmtkdqjhe" path="res://assets/audio/se/Choose.WAV" id="15_o28lr"]
[ext_resource type="AudioStream" uid="uid://cewkvylqdr7og" path="res://assets/audio/se/select.WAV" id="16_f13lk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gdwjv"]
shader = ExtResource("1_5ohf3")

[sub_resource type="Theme" id="Theme_wk2pf"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0.129412, 0.129412, 0.129412, 1)
Label/constants/shadow_outline_size = 2
Label/font_sizes/font_size = 24
Label/fonts/font = ExtResource("4_mj7o4")

[sub_resource type="AtlasTexture" id="AtlasTexture_uv0xc"]
resource_local_to_scene = true
atlas = ExtResource("4_o0vl8")
region = Rect2(0, 0, 23, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlp0g"]
resource_local_to_scene = true
atlas = ExtResource("4_o0vl8")
region = Rect2(0, 22, 23, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3i7s"]
resource_local_to_scene = true
atlas = ExtResource("4_o0vl8")
region = Rect2(0, 44, 23, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_lls7n"]
resource_local_to_scene = true
atlas = ExtResource("4_o0vl8")
region = Rect2(0, 66, 23, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmd0w"]
resource_local_to_scene = true
atlas = ExtResource("4_o0vl8")
region = Rect2(0, 88, 23, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyojd"]
resource_local_to_scene = true
atlas = ExtResource("4_o0vl8")
region = Rect2(0, 110, 23, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_evw3m"]
resource_local_to_scene = true
atlas = ExtResource("4_o0vl8")
region = Rect2(0, 132, 23, 22)

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0

[node name="Blur" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Blur"]
material = SubResource("ShaderMaterial_gdwjv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="BG"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_wk2pf")

[node name="BG_heure" type="TextureRect" parent="BG/Control"]
layout_mode = 0
offset_top = 390.0
offset_right = 183.0
offset_bottom = 540.0
texture = ExtResource("4_1gqom")

[node name="Label" type="Label" parent="BG/Control/BG_heure"]
layout_mode = 0
offset_left = 16.0
offset_top = 114.0
offset_right = 56.0
offset_bottom = 139.0
script = ExtResource("5_5a460")

[node name="BG_date" type="TextureRect" parent="BG/Control"]
layout_mode = 0
offset_left = 640.0
offset_top = 476.0
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("8_ah852")
script = ExtResource("9_5ehvt")

[node name="Label" type="Label" parent="BG/Control/BG_date"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 42.0
offset_top = 28.0
offset_right = 82.0
offset_bottom = 53.0

[node name="Icon_Hiver" type="TextureRect" parent="BG/Control/BG_date"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 256.0
offset_right = 320.0
offset_bottom = 64.0
texture = ExtResource("10_dml48")

[node name="Icon_Printemps" type="TextureRect" parent="BG/Control/BG_date"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 256.0
offset_right = 320.0
offset_bottom = 64.0
texture = ExtResource("11_uyvtu")

[node name="Icon_Ete" type="TextureRect" parent="BG/Control/BG_date"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 256.0
offset_right = 320.0
offset_bottom = 64.0
texture = ExtResource("12_tn75m")

[node name="Icon_Automne" type="TextureRect" parent="BG/Control/BG_date"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 256.0
offset_right = 320.0
offset_bottom = 64.0
texture = ExtResource("13_51m2b")

[node name="Buttons" type="CanvasLayer" parent="."]
offset = Vector2(704, 16)
transform = Transform2D(1, 0, 0, 1, 704, 16)
script = ExtResource("1_vho6j")

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
offset_right = 126.0
offset_bottom = 77.0
theme_override_constants/separation = 1
script = ExtResource("1_db6wq")

[node name="Grimoire" parent="Buttons/VBoxContainer" instance=ExtResource("2_4glfl")]
layout_mode = 2
icon = SubResource("AtlasTexture_uv0xc")
label_text = "POKEGRIMOIRE"

[node name="Pokemon" parent="Buttons/VBoxContainer" instance=ExtResource("2_4glfl")]
layout_mode = 2
icon = SubResource("AtlasTexture_rlp0g")
label_text = "POKEMON"

[node name="Sac" parent="Buttons/VBoxContainer" instance=ExtResource("2_4glfl")]
layout_mode = 2
icon = SubResource("AtlasTexture_l3i7s")
label_text = "SAC"

[node name="Profile" parent="Buttons/VBoxContainer" instance=ExtResource("2_4glfl")]
layout_mode = 2
icon = SubResource("AtlasTexture_lls7n")
label_text = "{PLAYER_NAME}"

[node name="Save" parent="Buttons/VBoxContainer" instance=ExtResource("2_4glfl")]
layout_mode = 2
icon = SubResource("AtlasTexture_lmd0w")
label_text = "SAUVEGARDE"

[node name="Param√®tres" parent="Buttons/VBoxContainer" instance=ExtResource("2_4glfl")]
layout_mode = 2
icon = SubResource("AtlasTexture_cyojd")
label_text = "OPTION"

[node name="Retour" parent="Buttons/VBoxContainer" instance=ExtResource("2_4glfl")]
layout_mode = 2
icon = SubResource("AtlasTexture_evw3m")
label_text = "QUITTER"

[node name="ChooseAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("15_o28lr")
bus = &"Sounds"

[node name="SelectAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("16_f13lk")
bus = &"Sounds"
